--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-gspread==6.1.4
-google-auth==2.35.0
-twilio==9.2.3
 flask==2.3.3
 flask-cors==4.0.0
+twilio==9.2.3
 python-dotenv==1.0.0
+gunicorn==21.2.0
+gspread==6.1.4
+google-auth==2.35.0
